--- a/PoC.html
+++ b/PoC.html
@@ -168,12 +168,12 @@
 
 <body>
     <header>
-        <h1 style="overflow: hidden;float: left; margin-left:40px; color:rgb(15,17,96);"> 우리동네 픽업스토어</h1>
+        <a href="PoC_introPage.html"><img src="우리동네픽업스토어로고.png" alt="사진 없음" style="width:250px; height:60px;"></a>
         <!-- <iframe src="http://localhost:8000/untitled-1.html" style="width:90%; height:500px"></iframe> -->
     </header>
     <nav id="topMenu">
         <ul>
-            <li><a class="menuLink" href="#">우리동네 픽업스토어란?</a></li>
+            <li><a class="menuLink" href="PoC_1stPage.html">우리동네 픽업스토어란?</a></li>
             <li><a class="menuLink" href="PoC.html">지역별 픽업스토어</a></li>
             <li><a class="menuLink" href="#">[소상공인] 픽업스토어 신청하기</a></li>
             <li><a class="menuLink" href="PoC_2ndPage.html">[소비자] 픽업 신청하기</a></li>
