--- a/PoC_2ndPage.html
+++ b/PoC_2ndPage.html
@@ -160,7 +160,7 @@
                 dataPoints: [
                     { y: 80, label: "배달신속성" },
                     { y: 90, label: "정확성" },
-                    { y: 90, label: "신선도" },
+                    { y: 90, label: "배송안전도" },
                     { y: 95, label: "친절도" },
                     { y: 85, label: "합리적인 가격" },
                 ]
@@ -174,7 +174,7 @@
                 dataPoints: [
                 {y: 71 , label:"배달신속성" },
                 {y: 80, label: "정확성"},
-                {y: 60 , label: "신선도"},
+                {y: 60 , label: "배송안전도"},
                 {y: 65, label: "친절도"  },
                 {y: 80, label: "합리적인 가격" },
                 ]
@@ -191,11 +191,11 @@
 
 <body>
     <header>
-        <h1 style="overflow: hidden;float: left; margin-left:40px; color:rgb(15,17,96);"> 우리동네 픽업스토어</h1>
+        <a href="PoC_introPage.html"><img src="우리동네픽업스토어로고.png" alt="사진 없음" style="width:250px; height:60px;"></a>
     </header>
     <nav id="topMenu">
         <ul>
-            <li><a class="menuLink" href="#">우리동네 픽업스토어란?</a></li>
+            <li><a class="menuLink" href="PoC_1stPage.html">우리동네 픽업스토어란?</a></li>
             <li><a class="menuLink" href="PoC.html">지역별 픽업스토어</a></li>
             <li><a class="menuLink" href="#">[소상공인] 픽업스토어 신청하기</a></li>
             <li><a class="menuLink" href="PoC_2ndPage.html">[소비자] 픽업 신청하기</a></li>
