--- a/PoC_1stPage.html
+++ b/PoC_1stPage.html
@@ -96,8 +96,8 @@
         </ul>
     </nav>
     <br>
-    <img src="슬라이드1.png" alt="사진 없음" style="width:1000px;">
-    <img src="슬라이드2.png" alt="사진 없음" style="width:1000px;">
+    <img src="슬라이드1.PNG" alt="사진 없음" style="width:1000px;">
+    <img src="슬라이드2.PNG" alt="사진 없음" style="width:1000px;">
 
 </body>
 
