--- a/PoC_introPage.html
+++ b/PoC_introPage.html
@@ -96,12 +96,12 @@
         </ul>
     </nav>
 
-    <h3>현재 탭은 '우리동네 픽업스토어란?'에 해당하는 페이지입니다. 이 페이지는 페이지 상단 로고를 누르시면 들어오실 수 있는 페이지입니다.
+    <h3>이 페이지는 페이지 상단 로고를 누르시면 들어오실 수 있는 페이지입니다.
         <br><br>
         안녕하세요 빅콘테스트 혁신아이디어부문에 참여하는 42코팀입니다.<br>
     우리동네 픽업스토어 PoC를 위한 프로토타입 웹사이트이며, 완벽한 웹사이트의 기능을 갖추지는 못한 상태입니다.</h3>
     
-    <h4>구현되어 있는 기능은 '우리동네 픽업스토어란?' 탭, '지역별 픽업스토어'탭과 '[소비자] 픽업 신청하기'탭입니다. <br>
+    <h4>구현되어 있는 기능은 '우리동네 픽업스토어란?' 탭 /'지역별 픽업스토어'탭 / '[소비자] 픽업 신청하기'탭입니다. <br>
         메뉴 바의 탭을 누르시면, 미리 만들어진 예시 html로 이동합니다.
     </h4>
 
